syntax = "proto3";

package gov.cms.mpsm.rda.v1;

option java_multiple_files = true;

import "google/protobuf/empty.proto";
import "rda/v1/fiss/fiss_claim.proto";
import "rda/v1/mcs/mcs_claim.proto";

// RDA API
service RDAService {

  // Gets all the FISS claims data from the database and closes the stream.
  rpc GetFissClaims(google.protobuf.Empty) returns (stream gov.cms.mpsm.rda.v1.fiss.FissClaim);

  // Gets all MCS claims data from the database, and closes the stream.
  rpc GetMcsClaims(google.protobuf.Empty) returns (stream gov.cms.mpsm.rda.v1.mcs.McsClaim);
}
